# Adaptix-EPCR-Service

./: .cta_fix_context.md  .cta_session_memory.md  .element_enum_extraction.json  .element_enum_extraction_extended.json  .env.example  .gitignore  .local-safety-diff.patch  .local-untracked-files.txt  .tmp_td.json  .tmp_td_new.json  .tmp_verify.py  ADAPTIX_EPCR_PRODUCTION_FREEZE_LOCK.md  AGENTS.md  ARCHITECTURE_TRUTH.md  BILLING_AND_PACKAGING_RULES.md  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  DOMAIN_BOUNDARIES.md  Dockerfile  EPCR_FIELD_VISIBILITY_MATRIX.md  EPCR_PRODUCTION_IMPLEMENTATION_REPORT.md  MARKET_READY.md  MARKET_READY_LEDGER.md  MODULE_ENTITLEMENTS.md  Makefile  PRODUCTION_READINESS.md  README.md  RUNBOOK.md  SERVICE_CONTRACT.md  SYSTEM_RULES.md  TEST_EVIDENCE.md  _log.txt  _probe.py  art11.json  chart_get.out  epcr-taskdef-update.json  epcr_field_visibility_matrix.json  exp.json  export_4.xml  export_req.json  (+16 more)
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  Dockerfile.staging  README.md  _ai_smoke.py  _bedrock_probe.py  _nova_smoke.py  _smoke_validator.py  _tier_smoke.py  alembic.ini  build_image.ps1  care_test.db  care_test_nemsis.db  care_verify.db  care_verify2.db  entrypoint.sh  pyproject.toml  pytest.ini  test_epcr_complete.py  verify_endpoints.py
backend/.claude/: nemsis_slice_contract.md
backend/artifact/nemsis_compliance_audit/: emsdataset_full_field_compliance_matrix.json
backend/epcr_app/: __init__.py  _ai_bedrock.py  ai_clinical_engine.py  ai_narrative_service.py  allergy_service.py  api.py  api_ai.py  api_audit.py  api_auth.py  api_chart_arrest.py  api_chart_crew.py  api_chart_dispatch.py  api_chart_disposition.py  api_chart_exam.py  api_chart_history.py  api_chart_injury.py  api_chart_outcome.py  api_chart_payment.py  api_chart_response.py  api_chart_scene.py  api_chart_situation.py  api_chart_times.py  api_chart_workspace.py  api_clinical_extended.py  api_cpae.py  api_cta_examiner_workflow.py  api_cta_testing.py  api_desktop.py  api_export.py  api_intervention_ext.py  api_medication_admin_ext.py  api_nemsis.py  api_nemsis_custom_elements.py  api_nemsis_datasets.py  api_nemsis_defined_lists.py  api_nemsis_field_graph.py  api_nemsis_field_values.py  api_nemsis_packs.py  api_nemsis_registry.py  api_nemsis_scenarios.py  (+154 more)
backend/epcr_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/epcr_app/auth/: __init__.py  auth_context.py  dependencies.py
backend/epcr_app/models/: __init__.py  core.py  extract.py  nemsis_binding.py  ocr.py  structured_extraction.py  transport_link.py
backend/epcr_app/nemsis/: __init__.py  cad_dispatch_mapper.py  compare_official.py  cta_client.py  cta_html_to_xml.py  dem_resolver.py  export_builder.py  nemsis_coded_values.py  runtime_injector.py  schematron_validator.py  service.py  (+2 more)
backend/migrations/: env.py  pre_stamp_if_untracked.py
backend/scripts/: backfill_xsd_codelists.py  generate_nemsis_compliance_audit.py  regenerate_frontend_nemsis_manifest.py  safe_migrate.sh  seed_cta_demo.py
backend/tests/: agency_helpers.py  conftest.py  test_anatomical_finding_model.py  test_anatomical_finding_service.py  test_anatomical_finding_validation.py  test_api_chart_arrest.py  test_api_chart_crew.py  test_api_chart_dispatch.py  test_api_chart_disposition.py  test_api_chart_history.py  test_api_chart_injury.py  test_api_chart_outcome.py  test_api_chart_payment.py  test_api_chart_response.py  test_api_chart_scene.py  test_api_chart_situation.py  test_api_chart_times.py  test_api_cta_testing.py  test_api_export_auth_context.py  test_api_intervention_ext.py  test_api_medication_admin_ext.py  test_api_nemsis_datasets.py  test_api_patient_profile_ext.py  test_api_version.py  test_api_vitals_ext.py  test_audit_trail_query_service.py  test_auth_dependency_signature_required.py  test_cad_handoff_ingest_service.py  test_caregraph_cpae_vas_vision.py  test_chart_workspace_api.py  test_chart_workspace_assessment_contract.py  test_chart_workspace_schematron_gate.py  test_chart_workspace_service.py  test_clinical_visual_api.py  test_clinical_visual_foundations.py  test_cta_tac_case_matrix.py  test_cta_tac_dem_exact_match.py  test_cta_testing_portal_api.py  test_cta_vendor_authoritative_suite.py  test_dem_scenario_template_path.py  (+131 more)
(+283 files in other folders)
