[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epcr-app"
version = "0.1.0"
description = "EPCR service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.0.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "lxml>=5.2.0",
    "saxonche>=12.5.0",
    "zeep>=4.2.1",
    "httpx>=0.27.0",
    "anthropic>=0.28.0",
    "adaptix-contracts @ git+https://github.com/joshuawendorf21310/Adaptix-Contracts.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["epcr_app*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["ignore::ResourceWarning"]
